[package]
name = "rocket_async_compression"
version = "0.1.2"
edition = "2021"

description = "Response compression in both gzip and brotli formats for the Rocket webserver using the async-compression library"
license = "MIT"
license-file = "LICENSE"
keywords = ["rocket", "gzip", "brotli", "compression"]

[dependencies]
rocket = "0.5.0-rc.2"
lazy_static = "1.4.0"
futures = "0.3.17"

async-compression = { version = "0.3.8", features = [
    "gzip",
    "brotli",
    "tokio",
] }
